--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,2 +1,1 @@
-<input id="globoId" type="text" />
-<iframe *ngIf='noLogin' id="testeFrame" style='height: 100%; width: 100%;'></iframe>
+<iframe style="display: none" *ngIf='noLogin' id="testeFrame" style='height: 100%; width: 100%;'></iframe>
