--- a/src/pages/ligas/ligas.html
+++ b/src/pages/ligas/ligas.html
@@ -5,3 +5,18 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
+
+<ion-content padding *ngIf="ligas">
+  <ion-row>
+    <ion-item id="nm-time">
+      <h3>Ligas clássicas</h3>
+    </ion-item>
+  </ion-row>
+
+  <!-- <ion-row justify-content-center>
+    <ion-img id="escudo_svg" src="{{teamInfo.url_escudo_svg}}"></ion-img>
+  </ion-row> -->
+
+
+
+</ion-content>
