--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,7 +4,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Cartolino
+      Meu Time
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -33,9 +33,6 @@
     <ion-list>
       <button *ngIf="!teamInfo" ion-item (click)="openPage('LoginPage')">
         Login
-      </button>
-      <button ion-item (click)="openPage('LigasPage')">
-        Ligas
       </button>
     </ion-list>
   </ion-content>
