--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,4 +2,5 @@
   <ion-tab [root]="tab1Root" [tabTitle]="tab1Title"></ion-tab>
   <ion-tab [root]="tab2Root" [tabTitle]="tab2Title"></ion-tab>
   <ion-tab [root]="tab3Root" [tabTitle]="tab3Title"></ion-tab>
+  <ion-tab [root]="tab4Root" [tabTitle]="tab4Title"></ion-tab>
 </ion-tabs>
