--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -31,7 +31,7 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <button *ngIf="!teamInfo" ion-item (click)="openPage('LoginPage')">
+      <button  ion-item (click)="openPage('LoginPage')">
         Login
       </button>
     </ion-list>
