--- a/src/pages/liga-detail/liga-detail.html
+++ b/src/pages/liga-detail/liga-detail.html
@@ -10,37 +10,51 @@
   <ion-grid>
     <ion-row>
       <ion-item id="nm-lista-container">
-        <h3 id="nm-lista">Times</h3>
+        <h3 class="lbl-nome-bold" text-center>Times</h3>
       </ion-item>
     </ion-row>
     <ion-row>
       <ion-col col-7 text-center>
         Time
       </ion-col>
-      <ion-col>
+      <ion-col text-center>
         Parcial
+      </ion-col>
+      <ion-col text-center>
+        Total
       </ion-col>
     </ion-row>
   </ion-grid>
 
 
-  <ion-list *ngFor="let time of liga.times">
+  <ion-list *ngFor="let time of liga.times; let i = index">
     <ion-grid>
       <ion-row align-items-center id="border-bottom-row">
         <ion-col col-7>
           <ion-item class="time-item">
             <ion-avatar item-start>
-              <img width="64px" src="{{time.time.url_escudo_svg}}">
+              <img width="64px" src="{{time.url_escudo_svg}}">
             </ion-avatar>
-            <h3 class='lbl-nome lbl-nome-bold'>{{time.time.nome}}</h3>
-            <p class="lbl-nome">{{time.time.nome_cartola}}</p>
+            <h3 class='lbl-nome lbl-nome-bold'>{{i+1}}°</h3>
+            <h3 class='lbl-nome lbl-nome-bold'>{{time.nome}}</h3>
+            <p class="lbl-nome">{{time.nome_cartola}}</p>
+          </ion-item>
+        </ion-col>
+
+        <ion-col text-center>
+          <ion-item class="time-item">
+            <p class="lbl-nome lbl-nome-bold" text-center [ngStyle]="{'color': time.pontos.rodada>0? 'green' : 'red'}">{{formatPontos(time.pontos.rodada)}}</p>
+            <p class="lbl-nome lbl-nome-bold" text-center>C$ {{time.patrimonio}}</p>
           </ion-item>
         </ion-col>
 
         <ion-col>
           <ion-item class="time-item">
-            <h3></h3>
-            <p class="lbl-nome lbl-nome-bold" [ngStyle]="{'color': time.parcial>0? 'green' : 'red'}">{{time.parcial}}</p>
+            <p class="lbl-nome lbl-nome-bold" text-center>{{formatPontos(time.pontos.campeonato)}}</p>
+            <p class="lbl-nome lbl-nome-bold" text-center [ngStyle]="{'color': variacaoColor(time.variacao.campeonato)}">
+
+              <ion-icon class="seta-variacao" *ngIf='time.variacao.campeonato!=0' name="{{time.variacao.campeonato>0?'ios-arrow-round-up':'ios-arrow-round-down'}}"></ion-icon>
+              {{time.variacao.campeonato}}</p>
           </ion-item>
         </ion-col>
 
