--- a/src/pages/time-detail/time-detail.html
+++ b/src/pages/time-detail/time-detail.html
@@ -13,7 +13,7 @@
   </ion-refresher>
   <ion-grid>
     <ion-row class="time-escudo-svg-content">
-      <ion-item class="without-padding-left">
+      <ion-item *ngIf="time.time.url_escudo_svg">
         <ion-thumbnail item-start class="time-escudo-svg">
           <img src="{{time.time.url_escudo_svg}}">
         </ion-thumbnail>
@@ -29,8 +29,8 @@
     <ion-row>
       <ion-col text-center align-self-center class="lbl-nome-bold">
         <ion-item class="time-item">
-          <p class="lbl-nome lbl-nome-bold" text-center>Patrimônio</p>
-          <p class="lbl-nome lbl-nome-bold" text-center>C$ {{time.patrimonio}}</p>
+          <p class="lbl-nome lbl-nome-bold" text-center>Pontuados</p>
+          <p class="lbl-nome lbl-nome-bold" text-center>{{time.pontuados}}/12</p>
         </ion-item>
       </ion-col>
       <ion-col text-center align-self-center class="lbl-nome-bold">
