--- a/src/pages/liga-detail/liga-detail.html
+++ b/src/pages/liga-detail/liga-detail.html
@@ -49,7 +49,8 @@
         <ion-col col-6>
           <ion-item class="time-item item-escudo">
             <ion-thumbnail item-start class="time-escudo">
-              <img src="{{time.url_escudo_svg}}">
+              <img id="escudo" src="{{time.url_escudo_svg}}">
+              <img class="time-perfil-foto" src="{{time.foto_perfil}}">
             </ion-thumbnail>
             <h3 class='lbl-nome lbl-nome-bold' [innerHtml]="(orderBy=='pontos.rodada'?time.ranking.rodada:time.ranking.campeonato)+'°'"></h3>
             <h3 class='lbl-nome lbl-nome-bold'>{{time.nome}}</h3>
