--- a/src/pages/jogador-details/jogador-details.html
+++ b/src/pages/jogador-details/jogador-details.html
@@ -6,7 +6,6 @@
   </ion-navbar>
 </ion-header>
 
-
 <ion-content padding>
   <ion-grid>
     <ion-row class="jogador-foto-row">
@@ -28,24 +27,40 @@
         <h2 class="lbl-nome-bold">Scout</h2>
       </ion-item>
     </ion-row>
-    <ion-row>
-      <ion-col col-8 text-left align-self-center class="lbl-nome-bold">
+    <ion-row margin-bottom>
+      <ion-col col-6 offset-1 text-center align-self-center class="lbl-nome-bold">
         Ação
       </ion-col>
       <ion-col col-3 text-center align-self-center class="lbl-nome-bold">
         Pontos
       </ion-col>
     </ion-row>
-    <ion-list *ngFor="let scout of getAtletaScout()">
-
-      <ion-row>
-        <ion-col col-8>
-          {{scout.quantidade}} {{scout.acao}}
+    <ion-list class="border-bottom">
+      <ion-row align-items-center *ngFor="let scout of getAtletaScout()">
+        <ion-col col-5 offset-2 text-left>
+          <h3 class="lbl-nome-bold scout-name">{{scout.quantidade}} {{scout.acao}}</h3>
         </ion-col>
         <ion-col col-3 text-center>
-          <span [ngStyle]="{'color': scout.pontos>0? 'green' : 'red'}">{{scout.pontos}}</span>
+          <h3 class="lbl-nome-bold scout-name" [ngStyle]="{'color': scout.pontos>0? 'green' : 'red'}">{{scout.pontos}}</h3>
         </ion-col>
       </ion-row>
     </ion-list>
+    <ion-row>
+      <ion-item class="no-border-bottom">
+        <h2 class="lbl-nome-bold">Time com esse jogador</h2>
+      </ion-item>
+    </ion-row>
+    <ion-list class="border-bottom">
+      <ion-row align-items-center>
+        <ion-col col-5 offset-2 text-left>
+          <h3 class="lbl-nome-bold scout-name">{{scout.quantidade}} {{scout.acao}}</h3>
+        </ion-col>
+        <ion-col col-3 text-center>
+          <h3 class="lbl-nome-bold scout-name" [ngStyle]="{'color': scout.pontos>0? 'green' : 'red'}">{{scout.pontos}}</h3>
+        </ion-col>
+      </ion-row>
+    </ion-list>
+
+
   </ion-grid>
 </ion-content>
